@@ -1,5 +1,5 @@
 /*
- * $Id: gp_cairo.c,v 1.45 2009/03/01 05:04:53 sfeam Exp $
+ * $Id: gp_cairo.c,v 1.46 2009/03/18 17:05:48 sfeam Exp $
  */
 
 /* GNUPLOT - gp_cairo.c */
@@ -114,6 +114,9 @@ static gchar* gp_cairo_convert_symbol_to_unicode(plot_struct *plot, const char* 
 static void gp_cairo_add_attr(plot_struct *plot, PangoAttrList * AttrList, int start, int end );
 /* add a blank character to the text string and an associated custom shape to the attribute list */
 static void gp_cairo_add_shape( PangoRectangle rect,int position);
+
+/* Average character height as reported back through term->v_char */
+static int avg_vchar = 150;
 
 /* set a cairo pattern or solid fill depending on parameters */
 static void gp_cairo_fill(plot_struct *plot, int fillstyle, int fillpar);
@@ -743,7 +746,10 @@ void gp_cairo_draw_text(plot_struct *plot, int x1, int y1, const char* string)
 
 	pango_layout_get_extents(layout, &ink_rect, &logical_rect);
 
-	vert_just = ((double)ink_rect.height/2 +(double)ink_rect.y) / PANGO_SCALE;
+	/* EAM Mar 2009 - Adjusting the vertical position for every character fragment */
+	/* leads to uneven baselines.  Better to adjust to the "average" character height */
+	/* vert_just = ((double)ink_rect.height/2 +(double)ink_rect.y) / PANGO_SCALE; */
+	vert_just = avg_vchar/2;
 
 	x = (double) x1;
 	y = (double) y1;
@@ -1655,6 +1661,8 @@ void gp_cairo_set_termvar(plot_struct *plot, unsigned int *v_char,
 		*v_char = tmp_v_char;
 	if (h_char)
 		*h_char = tmp_h_char;
+
+	avg_vchar = tmp_v_char;
 }
 
 void gp_cairo_solid_background(plot_struct *plot)
